# amazing-

./: CMakeLists.txt  README.md
source/: plugin.cpp  plugin.h  prototypes.h  samp.h  singleton.h
